# nerdgraph-get-managed-accounts

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: __init__.py  client.py  rate_limiter.py
src/api/queries/: __init__.py
src/data/: __init__.py  csv_handlers.py
src/get_managed_accounts/: main.py
src/get_managed_accounts/api/: client.py  rate_limiter.py
src/get_managed_accounts/api/queries/: base_queries.py
src/get_managed_accounts/data/: csv_handlers.py
src/utils/: logger.py
